[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hive_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by hive python tests."
authors = ["Mateusz Żebrak <mzebrak@syncad.com>"]
packages = [
    { include = "hive_local_tools" },
    { include = "hive_utils" },
    { include = "tests_api" },
]


[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.1.2"
pytest-rerunfailures = "10.2"
pytest-timeout = "2.1.0"
pytest-xdist = "2.5.0"
schemas = { path = "schemas", develop = true }
shared-tools = { path = "shared-tools", develop = true }
test-tools = { path = "test-tools", develop = true }
