[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hive_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by hive python tests."
authors = ["Mateusz Żebrak <mzebrak@syncad.com>"]
packages = [
    { include = "hive_local_tools" },
    { include = "hive_utils" },
]


source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },  # wax
    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },  # schemas
]


[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.2.2"
pytest-rerunfailures = "10.2"
pytest-timeout = "2.1.0"
pytest-repeat = "0.9.1"
pytest-xdist = "3.2.0"
tavern = "2.2.0"
types-PyYAML = "6.0.12.11"
shared-tools = { path = "shared-tools", develop = true }
test-tools = { path = "test-tools", develop = true }
tests_api = { path = "tests_api", develop = true }
wax = "0.0.1a4+277cf4f"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.4.0"
black = "23.9.1"
ruff = "0.0.292"
